# TC1028.1

./: README.md  pyproject.toml  reporte.tex  requirements.txt  scraper.exs
tc10281/: main.py  palabras.txt
tests/: test_tc10281.py
